[package]
name = "gpx-battery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow"] }
hidapi = "2.6.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri-winrt-notification = "0.7.3"
tray-icon = "0.24.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_System_Threading"] }
winit = "0.30.13"
winreg = "0.56.0"

[build-dependencies]
winresource = "0.1.31"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
